@@ -38,7 +38,15 @@ elseif(WIN32)
 	if(MSVC)
 		math(EXPR WIX_DRAWPILE_TOOLSET_VERSION_MAJOR "${MSVC_TOOLSET_VERSION} / 10")
 	endif()
-	configure_file(pkg/installer.wix.in pkg/installer.wix)
+
+	if(CMAKE_SIZEOF_VOID_P EQUAL 4)
+		set(CPACK_WIX_ARCHITECTURE x86)
+	else()
+		set(CPACK_WIX_ARCHITECTURE x64)
+	endif()
+	message(STATUS "Configuring ${CPACK_WIX_ARCHITECTURE} installer")
+	configure_file("pkg/installer-${CPACK_WIX_ARCHITECTURE}.wix.in" pkg/installer.wix)
+
 	set(CPACK_WIX_PATCH_FILE "${CMAKE_CURRENT_BINARY_DIR}/pkg/installer.wix")
 	if(HAVE_CODE_SIGNING)
 		message(STATUS "Will sign installer executable")
