@@ -2,8 +2,8 @@
 	<CPackWiXFragment Id="CM_CP_drawpile.exe">${WIX_DRAWPILE_PROGIDS}</CPackWiXFragment>
 
 	<CPackWiXFragment Id="#PRODUCT">
-		<Condition Message="${PROJECT_NAME} requires Windows 7 64-bit or later.">
-			<![CDATA[Installed OR (VersionNT64 >= 601)]]>
+		<Condition Message="${PROJECT_NAME} requires Windows 7 or later.">
+			<![CDATA[Installed OR (VersionNT >= 601)]]>
 		</Condition>
 
 		<Property Id="VC_REDIST_INSTALLED" Secure="yes">
@@ -11,10 +11,10 @@
 				Id="VC_REDIST_RegKey"
 				Type="raw"
 				Root="HKLM"
-				Key="SOFTWARE\Microsoft\VisualStudio\${WIX_DRAWPILE_TOOLSET_VERSION_MAJOR}.0\VC\Runtimes\X64"
+				Key="SOFTWARE\Microsoft\VisualStudio\${WIX_DRAWPILE_TOOLSET_VERSION_MAJOR}.0\VC\Runtimes\X86"
 				Name="Version"/>
 		</Property>
-		<Condition Message="${PROJECT_NAME} requires the Visual Studio x64 Redistributable. Please download and install https://aka.ms/vs/17/release/vc_redist.x64.exe first.">
+		<Condition Message="${PROJECT_NAME} requires the Visual Studio x86 Redistributable. Please download and install https://aka.ms/vs/17/release/vc_redist.x86.exe first.">
 			Installed OR VC_REDIST_INSTALLED
 		</Condition>
 	</CPackWiXFragment>
