@@ -35,6 +35,7 @@ Unreleased Version 2.2.1-pre
  * Feature: Show last joined address in join dialog.
  * Fix: Hide disconnection banner after establishing connection to a session.
  * Fix: Make censoring layer groups actually have an effect.
+ * Fix: Don't use 64 bit stuff in 32 bit Windows installer.
 
 2024-01-13 Version 2.2.0
  * Server Fix: Add --ssl-key-algorithm parameter to allow non-RSA SSL keys, defaulting to guessing the most common formats RSA and EC. Thanks Bluestrings for reporting.
